<resources>
    <string name="app_name">Apuntes Fotograficos</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="session_title">Iniciar Sesión</string>
    <string name="session_subtitle">Bienvenido, por favor ingresa tus credenciales.</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="re_enter_password">Reingresar  contraseña</string>
    <string name="sign_in">Ingresar</string>
    <string name="sign_up">Registrarse</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="title_sign_up">Crear cuenta</string>
    <string name="register_subtitle">Crea y administra tus apuntes fotográficos de manera fácil y sencilla.</string>
    <string name="name_lastname">Nombre completo</string>
    <string name="phone">Teléfono</string>
    <string name="main_title">Bienvenido,</string>
    <string name="notes">Apuntes</string>
    <string name="share_notes">Apuntes Compartidos</string>
    <string name="category">Categorías</string>
    <string name="add_category">Añadir categoría</string>
    <string name="share">Compartir</string>
    <string name="last_notes">Entradas recientes</string>
    <string name="delete">Eliminar</string>
    <string name="modify">Modificar</string>
    <string name="cancel">Cancelar</string>
    <string name="create_note">Crear Apunte</string>
    <string name="create_category">Crear Categoría</string>
    <string name="accept">Aceptar</string>
    <string name="ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>