<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_card_dialog"
    app:cardCornerRadius="10dp"
    android:layout_gravity="center"
    android:backgroundTint="#FEFDF9"
    android:layout_width="292dp"
    android:layout_height="336dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_weight="0.1"
            android:text="Calculo"
            style="@style/title_style"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/pencil"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="1"
                android:text="@string/modify"
                style="@style/title_style"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/trash"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_weight="1"
                android:text="@string/delete"
                style="@style/title_style"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_dialog_cancel"
            style="@style/button_style"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel" />
    </LinearLayout>
</androidx.cardview.widget.CardView>