<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_main"
    tools:context=".view.NotesFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <ImageView
                android:id="@+id/btn_back_notes"
                android:layout_weight="0.1"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_back" />
            <TextView
                android:id="@+id/tv_main_title"
                style="@style/title_style"
                android:layout_weight="2"
                android:text="@string/notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_apuntes"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                android:layout_width="129dp"
                android:layout_height="126dp">
                <LinearLayout
                    android:id="@+id/btn_add_category"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        style="@style/subtitle_style"
                        android:textStyle="bold"

                        android:text="@string/add_category"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:src="@drawable/category_edit"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_grupos"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                android:layout_width="129dp"
                android:layout_height="126dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        style="@style/subtitle_style"
                        android:textStyle="bold"
                        android:text="@string/share"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:src="@drawable/share"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"/>
        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    style="@style/subtitle_style"
                    android:textStyle="bold"
                    android:text="@string/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ListView
                    android:id="@+id/lv_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</FrameLayout>