<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".view.MainFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <TextView
                android:id="@+id/tv_main_title"
                style="@style/title_style"
                android:layout_weight="2"
                android:text="Bienvenido, Oscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/btn_profile"
                android:layout_weight="0.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profile" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_apuntes"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                android:layout_width="129dp"
                android:layout_height="126dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        style="@style/subtitle_style"
                        android:textStyle="bold"

                        android:text="@string/notes"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:src="@drawable/note"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_share_notes"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                android:layout_width="129dp"
                android:layout_height="126dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        style="@style/subtitle_style"
                        android:textStyle="bold"
                        android:text="@string/share_notes"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:src="@drawable/team"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="10dp"/>
        <androidx.cardview.widget.CardView
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    style="@style/subtitle_style"
                    android:textStyle="bold"
                    android:text="@string/last_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_note"
        android:src="@drawable/ic_add_a_photo"
        app:backgroundTint="@color/white"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>